--- a/src/main/resources/fxml/AccountRegistration.fxml
+++ b/src/main/resources/fxml/AccountRegistration.fxml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -208,7 +214,7 @@
                            <Font size="16.0" />
                         </font>
                      </Label>
-                     <ComboBox fx:id="userRoleComboBox" maxWidth="1.7976931348623157E308" 
+                     <ComboBox fx:id="userRoleComboBox" 
                               promptText="Select your role" styleClass="form-input-field">
                         <font>
                            <Font size="16.0" />
