--- a/src/main/resources/fxml/TicketSubmission.fxml
+++ b/src/main/resources/fxml/TicketSubmission.fxml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -209,7 +215,7 @@
                            <Font size="16.0" />
                         </font>
                      </Label>
-                     <ComboBox fx:id="categoryComboBox" maxWidth="1.7976931348623157E308" 
+                     <ComboBox fx:id="categoryComboBox" 
                               promptText="Select a category" styleClass="form-input-field">
                         <font>
                            <Font size="16.0" />
@@ -223,7 +229,7 @@
                            <Font size="16.0" />
                         </font>
                      </Label>
-                     <ComboBox fx:id="priorityComboBox" maxWidth="1.7976931348623157E308" 
+                     <ComboBox fx:id="priorityComboBox" 
                               promptText="Select priority level" styleClass="form-input-field">
                         <font>
                            <Font size="16.0" />
@@ -352,7 +358,7 @@
                         <Font size="16.0" />
                      </font>
                   </Label>
-                  <ComboBox fx:id="callbackTimeComboBox" maxWidth="300.0" 
+                  <ComboBox fx:id="callbackTimeComboBox" 
                            promptText="Select preferred time" styleClass="form-input-field">
                      <font>
                         <Font size="16.0" />
@@ -397,13 +403,13 @@
                </VBox>
                
                <HBox spacing="20">
-                  <Button fx:id="saveAsDraftButton" maxWidth="1.7976931348623157E308" 
+                  <Button fx:id="saveAsDraftButton" 
                          styleClass="button-secondary" text="💾 Save as Draft" HBox.hgrow="ALWAYS">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Button>
-                  <Button fx:id="submitTicketButton" maxWidth="1.7976931348623157E308"
+                  <Button fx:id="submitTicketButton" 
                          styleClass="button-primary" text="🎫 Submit Ticket" HBox.hgrow="ALWAYS">
                      <font>
                         <Font name="System Bold" size="18.0" />
